Updated Ai ships